<resources>
    <string name="app_name">Today News</string>
    <string name="app_name_zh">今日新闻</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu">MENU</string>
    <string name="search_hint">搜索一下</string>
    <string name="search">搜索</string>
    <string name="menu_history">历史记录</string>
    <string name="menu_password">修改密码</string>
    <string name="menu_app">关于APP</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="loading_ch">加载中……</string>
    <string name="login_zh">登陆</string>
    <string name="register_account_zh">注册账号</string>
    <string name="register_zh">注册</string>
    <string name="register_desc_zh">注册以获得独家服务</string>
    <string name="remind_password_zh">记住密码</string>
    <string name="default_username_zh">未登录用户</string>
    <string name="enter_phone_zh">请输入手机号</string>
    <string name="enter_old_password_zh">请输入旧密码</string>
    <string name="enter_new_password_zh">请输入新密码</string>
    <string name="enter_password_zh">请输入密码</string>
    <string name="enter_username_zh">请输入用户名</string>
    <string name="enter_password_confirm_zh">请再次输入密码确认</string>
    <string name="edit_info_zh">修改资料</string>
    <string name="my_collection_zh">我的收藏</string>
    <string name="feedback_and_help_zh">反馈与帮助</string>
    <string name="my_message_zh">我的消息</string>
    <string name="setting_zh">设置</string>
    <string name="privacy_policy_zh">隐私政策</string>
    <string name="about_us_zh">关于我们</string>
    <string name="switch_account_zh">切换账号</string>
    <string name="exit_login_zh">退出登录</string>
    <string name="confirm_zh">确定</string>
    <string name="today_news_zh">今日新闻</string>
    <string name="version_1_0_0">Version 1.0.0</string>
    <string name="version_1_0_1">Version 1.0.1</string>
    <string name="update_log_zh">更新日志</string>
    <string name="check_update_zh">检查更新</string>
    <string name="developed_by_rean">developed by Rean</string>
    <string name="user_center_zh">用户中心</string>
    <string name="repo_link_zh"><a href="https://github.com/Rean-Schwarze/Today-News">仓库地址</a></string>
    <string name="enter_desc_zh">请输入简介</string>
    <string name="save_zh">保存</string>
    <string name="collect_zh">收藏</string>
    <string name="edit_zh">编辑</string>
    <string name="has_selected_zh">已选择</string>
    <string name="delete_zh">删除</string>
    <string name="select_all_zh">全选</string>
    <string name="cancel_zh">取消</string>
    <string name="hint_zh">提示</string>
</resources>