<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".LoginActivity">

    <ImageView
        android:src="@mipmap/login_img"
        android:scaleType="centerCrop"
        android:background="@color/theme_500"
        android:layout_width="match_parent"
        android:layout_height="320dp"
        android:paddingTop="50dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="25sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="5dp"
        android:text="登陆"/>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="26dp">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:background="@drawable/login_et_bg"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp">

            <ImageView
                android:src="@drawable/baseline_phone_android_24"
                android:layout_gravity="center_vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <EditText
                android:id="@+id/login_et_phone"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:background="@null"
                android:hint="@string/enter_phone_zh" />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:background="@drawable/login_et_bg"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="40dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp">

            <ImageView
                android:src="@drawable/baseline_lock_24"
                android:layout_gravity="center_vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <EditText
                android:id="@+id/login_et_password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:background="@null"
                android:textColor="@color/login_text_grey"
                android:inputType="textPassword"
                android:hint="@string/enter_password_zh" />

        </androidx.appcompat.widget.LinearLayoutCompat>



        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <CheckBox
                android:id="@+id/login_cb_remember_password"
                android:layout_centerVertical="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/remind_password_zh"/>

            <TextView
                android:layout_centerVertical="true"
                android:id="@+id/login_register_btn"
                android:layout_marginTop="5dp"
                android:layout_alignParentEnd="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register_account_zh"/>

        </RelativeLayout>


        
        <Button
            android:id="@+id/login_btn"
            android:background="@drawable/rounded_button"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="25dp"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:textSize="16sp"
            android:text="@string/login_zh"/>

    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.appcompat.widget.LinearLayoutCompat>