<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/main_bar_nav"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:gravity="center"
        android:background="@color/theme_500">

        <ImageView
            android:id="@+id/main_bav_menu"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:src="@drawable/baseline_menu_24"
            android:contentDescription="@string/menu" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:paddingEnd="10dp"
            tools:ignore="RtlSymmetry">

            <EditText
                android:id="@+id/search_text"
                android:layout_toStartOf="@id/search_button"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:background="@color/white"
                android:paddingStart="15dp"
                android:textSize="14sp"
                android:hint="@string/search_hint"/>

            <TextView
                android:id="@+id/search_button"
                android:layout_alignParentEnd="true"
                android:layout_width="wrap_content"
                android:layout_height="55dp"
                android:gravity="center"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:textColor="@color/white"
                android:textAlignment="center"
                android:text="@string/search"/>

        </RelativeLayout>


    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    
        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tab_layout"
            app:tabMode="scrollable"
            app:tabIndicatorFullWidth="false"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/view_pager"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

    </androidx.appcompat.widget.LinearLayoutCompat>


</androidx.appcompat.widget.LinearLayoutCompat>