<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ResetPwdActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/reset_pwd_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/theme_500"
        app:navigationIcon="@drawable/baseline_arrow_back_white_24"
        app:title="修改密码"
        app:titleTextColor="@color/white" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_margin="26dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:background="@drawable/login_et_bg"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp">

            <ImageView
                android:src="@drawable/baseline_lock_24"
                android:layout_gravity="center_vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <EditText
                android:id="@+id/reset_pwd_old_pwd"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:background="@null"
                android:textColor="@color/login_text_grey"
                android:inputType="textPassword"
                android:hint="@string/enter_old_password_zh" />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:background="@drawable/login_et_bg"
            android:layout_marginTop="30dp"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp">

            <ImageView
                android:src="@drawable/baseline_lock_24"
                android:layout_gravity="center_vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <EditText
                android:id="@+id/reset_pwd_new_pwd"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:background="@null"
                android:textColor="@color/login_text_grey"
                android:inputType="textPassword"
                android:hint="@string/enter_new_password_zh" />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:background="@drawable/login_et_bg"
            android:layout_marginTop="30dp"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp">

            <ImageView
                android:src="@drawable/baseline_lock_24"
                android:layout_gravity="center_vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <EditText
                android:id="@+id/reset_pwd_confirm_pwd"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:background="@null"
                android:textColor="@color/login_text_grey"
                android:inputType="textPassword"
                android:hint="@string/enter_password_confirm_zh" />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <Button
            android:id="@+id/reset_pwd_btn"
            android:background="@drawable/rounded_button"
            android:layout_marginTop="35dp"
            android:layout_marginBottom="25dp"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:textSize="16sp"
            android:text="@string/confirm_zh"/>

    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.appcompat.widget.LinearLayoutCompat>